--- a/fullscreen/android_fullscreen/app/build.gradle
+++ b/fullscreen/android_fullscreen/app/build.gradle
@@ -5,11 +5,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
+    buildToolsVersion "30.0.0"
+    ndkVersion "21.3.6528147"
+
     defaultConfig {
         applicationId "dev.flutter.example.androidfullscreen"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
